--- a/Lab2.ipynb
+++ b/Lab2.ipynb
@@ -41,19 +41,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "534d525c",
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "# Імпорт необхідних бібліотек\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Завантаження даних із локального файлу\n",
-    "file_path = 'NationalNames.csv'  # Вкажіть шлях до вашого файлу\n",
+    "file_path = 'NationalNames.csv'\n",
     "data = pd.read_csv(file_path)"
    ]
   },
@@ -188,7 +186,6 @@
     }
    ],
    "source": [
-    "# Виведення перших 8 рядків\n",
     "data.head(8)\n"
    ]
   },
@@ -220,7 +217,6 @@
     }
    ],
    "source": [
-    "# Виведення назв стовпців\n",
     "data.columns\n"
    ]
   },
@@ -234,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "a04d34f2",
    "metadata": {
     "scrolled": true
@@ -286,23 +282,20 @@
        "1      M  39199"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Розрахунок кількості унікальних жіночих та чоловічих імен\n",
     "unique_female_names = data[data['Gender'] == 'F']['Name'].nunique()\n",
     "unique_male_names = data[data['Gender'] == 'M']['Name'].nunique()\n",
     "\n",
-    "# Формування таблиці\n",
     "unique_names_table = pd.DataFrame({\n",
     "    \"Gender\": [\"F\", \"M\"],\n",
     "    \"Name\": [unique_female_names, unique_male_names]\n",
     "})\n",
     "\n",
-    "# Виведення результату у вигляді таблиці\n",
     "unique_names_table\n"
    ]
   },
@@ -408,7 +401,6 @@
     }
    ],
    "source": [
-    "# Фільтр даних за 2010 рік та чоловічою статтю\n",
     "top_male_names_2010 = data[(data['Year'] == 2010) & (data['Gender'] == 'M')].nlargest(5, 'Count')\n",
     "\n",
     "top_male_names_2010[['Id', 'Name', 'Year', 'Gender', 'Count']]\n"
@@ -439,15 +431,10 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Предположим, у вас уже есть DataFrame 'data' с колонками 'Id', 'Name', 'Year', 'Gender', 'Count'\n",
-    "\n",
-    "# Находим запись с максимальным количеством упоминаний\n",
     "most_popular_name = data.loc[data['Count'].idxmax()]\n",
     "\n",
-    "# Формируем строку с результатом в нужном формате\n",
     "result_string = f\"The name is '{most_popular_name['Name']}' in {most_popular_name['Year']}\"\n",
     "\n",
-    "# Выводим результат\n",
     "print(result_string)"
    ]
   },
@@ -474,10 +461,8 @@
     }
    ],
    "source": [
-    "# Знаходимо рік з найбільшою кількістю унікальних імен\n",
     "year_with_most_unique_names = data.groupby('Year')['Name'].nunique().idxmax()\n",
     "\n",
-    "# Найпопулярніше ім’я в цьому році\n",
     "most_popular_in_peak_year = data[data['Year'] == year_with_most_unique_names].nlargest(1, 'Count')['Name'].values[0]\n",
     "\n",
     "print(f\"'{most_popular_in_peak_year}'\")"
@@ -551,7 +536,6 @@
     }
    ],
    "source": [
-    "# Задание 13\n",
     "jacob_female = data[(data['Name'] == 'Jacob') & (data['Gender'] == 'F')]\n",
     "most_popular_year_jacob_female = jacob_female[jacob_female['Count'] == jacob_female['Count'].max()]\n",
     "\n",
@@ -620,27 +604,22 @@
     }
    ],
    "source": [
-    "# Визначення гендерно нейтральних імен\n",
     "neutral_names = (\n",
     "    data.groupby(['Year', 'Name'])['Gender']\n",
     "    .nunique()\n",
     "    .reset_index()\n",
     ")\n",
     "\n",
-    "# Фільтрація для нейтральних імен (однакових для обох статей)\n",
     "neutral_years = neutral_names[neutral_names['Gender'] == 2].groupby('Year')['Name'].count()\n",
     "\n",
-    "# Рік із найбільшою кількістю таких імен\n",
     "year_with_most_neutral_names = neutral_years.idxmax()\n",
     "count_neutral_names = neutral_years.max()\n",
     "\n",
-    "# Формування таблиці\n",
     "neutral_names_table = pd.DataFrame({\n",
     "    \"Year\": [year_with_most_neutral_names],\n",
     "    \"Gender_neutral_names\": [count_neutral_names]\n",
     "})\n",
     "\n",
-    "# Виведення результату у вигляді таблиці\n",
     "neutral_names_table\n"
    ]
   },
@@ -730,10 +709,8 @@
     }
    ],
    "source": [
-    "# Сума народжень за рік\n",
     "total_births_per_year = data.groupby('Year')['Count'].sum().reset_index()\n",
     "\n",
-    "# Виведення результату у вигляді таблиці (перші 5 років)\n",
     "total_births_per_year.head()\n"
    ]
   },
@@ -763,7 +740,6 @@
     }
    ],
    "source": [
-    "# Задание 16\n",
     "births_per_year = data.groupby('Year')['Count'].sum()\n",
     "max_birth_year = births_per_year.idxmax()\n",
     "\n",
@@ -860,7 +836,6 @@
     }
    ],
    "source": [
-    "# Задание 17\n",
     "gender_counts_per_year = data.groupby(['Year', 'Gender'])['Count'].sum().unstack()\n",
     "\n",
     "gender_counts_per_year.head()\n"
@@ -892,10 +867,8 @@
     }
    ],
    "source": [
-    "# Підготовка даних\n",
     "births_by_gender = data.groupby(['Year', 'Gender'])['Count'].sum().unstack()\n",
     "\n",
-    "# Побудова графіка\n",
     "births_by_gender.plot(kind='line', figsize=(10, 6))\n",
     "plt.xlabel('Рік')\n",
     "plt.ylabel('Кількість народжень')\n",
@@ -912,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "f798f592",
    "metadata": {
     "scrolled": true
@@ -924,13 +897,12 @@
        "10221"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Задание 20\n",
     "neutral_names = data.groupby('Name').filter(lambda x: len(x['Gender'].unique()) > 1)\n",
     "neutral_count = neutral_names['Name'].nunique()\n",
     "\n",
@@ -947,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "94db7ed6",
    "metadata": {},
    "outputs": [
@@ -962,15 +934,9 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Предположим, у вас есть DataFrame 'data' со столбцом 'Year'\n",
-    "\n",
-    "# Вычисляем количество уникальных лет\n",
     "unique_years = data['Year'].nunique()\n",
-    "\n",
-    "# Формируем строку с результатом\n",
     "result_string = f\"'Спостереження проводилось {unique_years} років'\"\n",
     "\n",
-    "# Выводим результат\n",
     "print(result_string)"
    ]
   },
@@ -984,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "055ba534",
    "metadata": {},
    "outputs": [
@@ -997,14 +963,11 @@
     }
    ],
    "source": [
-    "# Задание 24\n",
-    "# Непопулярные имена - те, у которых Count минимален\n",
     "min_count = data['Count'].min()\n",
     "unpopular_names = data[data['Count'] == min_count]\n",
     "\n",
     "most_popular_of_unpopular = unpopular_names[unpopular_names['Count'] == unpopular_names['Count'].max()]\n",
     "\n",
-    "# Форматированный вывод результата\n",
     "name = most_popular_of_unpopular['Name'].values[0]\n",
     "count = most_popular_of_unpopular['Count'].values[0]\n",
     "\n",
@@ -1021,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "ff8e8882",
    "metadata": {},
    "outputs": [
@@ -1039,7 +1002,6 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Задание 25\n",
     "names_to_plot = data[data['Name'].isin(['John', 'Mary'])]\n",
     "names_per_year = names_to_plot.groupby(['Year', 'Name'])['Count'].sum().unstack()\n",
     "\n",
@@ -1059,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "b1d6919d",
    "metadata": {},
    "outputs": [
@@ -1075,7 +1037,6 @@
     }
    ],
    "source": [
-    "# Задание 26\n",
     "john_female = data[(data['Name'] == 'John') & (data['Gender'] == 'F')]\n",
     "mary_male = data[(data['Name'] == 'Mary') & (data['Gender'] == 'M')]\n",
     "\n",
@@ -1098,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "b6f659ff",
    "metadata": {},
    "outputs": [
@@ -1217,24 +1178,15 @@
        "[135 rows x 3 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Задание 27\n",
     "most_popular_names_per_year = data.loc[data.groupby('Year')['Count'].idxmax()]\n",
     "most_popular_names_per_year[['Year', 'Name', 'Count']]\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d1398256",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
